WebCore: Change the V8 and JSC SQLStatementErrorCallback to interpret 'undefined' return values as 'true', as required by the spec.

Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=35048

* bindings/js/JSCustomSQLStatementErrorCallback.cpp:
(WebCore::JSCustomSQLStatementErrorCallback::handleEvent):
* bindings/v8/custom/V8CustomSQLStatementErrorCallback.cpp:
(WebCore::V8CustomSQLStatementErrorCallback::handleEvent):
* bindings/v8/custom/V8CustomVoidCallback.cpp:
(WebCore::invokeCallbackHelper):
(WebCore::invokeCallback):
(WebCore::invokeCallbackTreatUndefinedAsTrue):
* bindings/v8/custom/V8CustomVoidCallback.h:

LayoutTests: 'undefined' return values from statement error callbacks are not
treated as 'true'. Fix the tests that did not use this
assumption.

Reviewed by NOBODY Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=35048

* storage/database-lock-after-reload.html:
* storage/private-browsing-readonly.html:
* storage/statement-error-callback.html:
* storage/statement-error-callback-expected.txt:



Canonical link: https://commits.webkit.org/46288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54981 268f45cc-cd09-0410-ab3c-d52691b4dbfc