WebCore/bindings/v8/custom/V8CustomVoidCallback.h
@@ -60,6 +60,7 @@ private:
 
 // Returns false if callback failed (null, wrong type, or threw exception).
 bool invokeCallback(v8::Persistent<v8::Object> callback, int argc, v8::Handle<v8::Value> argv[], bool& callbackReturnValue);
+bool invokeCallbackTreatOnlyExplicitFalseAsFalse(v8::Persistent<v8::Object> callback, int argc, v8::Handle<v8::Value> argv[], bool& callbackReturnValue);
 
 } // namespace WebCore
 
